[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/InputHandler.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayerManager.gd" type="Script" id=2]
[ext_resource path="res://scripts/Server.gd" type="Script" id=3]
[ext_resource path="res://scripts/DiagnosticsHandler.gd" type="Script" id=4]

[node name="Server" type="Node"]
script = ExtResource( 3 )

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="InputHandler" type="Node" parent="."]
script = ExtResource( 1 )

[node name="DiagnosticsHandler" type="Node" parent="."]
script = ExtResource( 4 )
